# emodpy-malaria

./: .bumpversion.cfg  pyproject.toml
docs/: Makefile
emodpy_malaria/interventions/: common.py  spacespraying.py
examples/campaign_sweep/: example.py
